package it.dosti.justit.events.state;

import it.dosti.justit.model.booking.Booking;
import it.dosti.justit.model.booking.BookingStatus;

public class PendingPaymentState extends BookingState {

    @Override
    public void pay(Booking booking) {
        booking.changeToState(new PendingConfirmState());
    }

    @Override
    public void reject(Booking booking) {
        booking.changeToState(new RejectedState());
    }


    @Override
    public BookingStatus getStatus() {
        return BookingStatus.PENDING_PAYMENT;
    }

}
