package it.dosti.justit.model.booking.state;

public enum BookingEvent {
    PAYMENT_RECEIVED,
    CONFIRM,
    REJECT,
    COMPLETED
}
