@startuml

class Booking <<state machine>> {
    - status: BookingState
    - currentState: BookingStatus
    + goNext(event: BookingEvent)
    + changeToState(state: BookingState)
}

abstract class BookingState <<abstract state>>{
    + pay(booking: Booking)
    + confirm(booking: Booking)
    + reject(booking: Booking)
    + complete(booking: Booking)
    + getStatus(): BookingStatus
}

enum BookingEvent <<enumeration>> {
    PAYMENT_RECEIVED,
    CONFIRM,
    REJECT,
    COMPLETE
}

enum BookingStatus <<enumeration>> {
    PENDING_PAYMENT,
    PENDING_CONFIRM,
    CONFIRMED,
    REJECTED,
    COMPLETED
}

class PendingPaymentState <<concrete state>> {
    +pay(booking: Booking)
    +reject(booking: Booking)
    +getStatus(): BookingStatus
}

class PendingConfirmState <<concrete state>> {
    +confirm(booking: Booking)
    +reject(booking: Booking)
    +getStatus(): BookingStatus
}
class ConfirmedState <<concrete state>> {
    +complete(booking: Booking)
    +getStatus(): BookingStatus
}
class RejectedState <<concrete state>> {
    +getStatus(): BookingStatus
}
class CompletedState <<concrete state>> {

    +getStatus(): BookingStatus
}

class BookingStateFactory {
    +{static} fromStatus(status: BookingStatus): BookingState
}

Booking -- BookingEvent
Booking -- BookingStatus
Booking --> BookingStateFactory
Booking --> BookingState

BookingState <|-- PendingPaymentState
BookingState <|-- PendingConfirmState
BookingState <|-- ConfirmedState
BookingState <|-- RejectedState
BookingState <|-- CompletedState

@enduml
